# NewBleakBraces

./: .gitignore  .replit  gulpfile.js  main.py  package-lock.json  package.json  pyproject.toml  replit.nix  watch_history_test.html  watch_history_test_mini.html  www.youtube.com_cookies.txt
config/: api_keys.py  client_secret_437701944424-bn2al82dhvou7soonk91dvthbcb63nba.apps.googleusercontent.com.json  rabbit-408205-firebase-adminsdk-opkxt-77124475b9.json
controllers/: firestore_controller.py  flask_routes.py  subprocess_controller.py  user_interaction_routes.py  video_routes.py
models/: firestore_encoder.py
services/: YTWatchTimeAnalysis.py  data_processing.py  pinecone.py
static/: menu.html  responsive.css
static/js/: google_oauth.js  menu.js  query.js  upload.js
static/style/: base.css  bundle.css  buttons.css  content.css  forms.css  header.css  loader.css  sidebar.css
templates/: index.html  query.html  upload.html
utils/: agents.py  html_parser.py  youtube_api.py
